--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <ul class="navigation-list">
             <li class="navigation-item">
-                <a href="#" class="navigation-link">Home</a>
+                <a href="#home" class="navigation-link">Home</a>
             </li>
             <li class="navigation-item">
-                <a href="#" class="navigation-link">About Us</a>
+                <a href="#about" class="navigation-link">About Us</a>
             </li>
             <li class="navigation-item">
-                <a href="#" class="navigation-link">Shop</a>
+                <a href="#shop" class="navigation-link">Shop</a>
             </li>
             <li class="navigation-item">
-                <a href="#" class="navigation-link">Customer</a>
+                <a href="#customer" class="navigation-link">Customer</a>
             </li>
             <li class="navigation-item">
-                <a href="#" class="navigation-link">Contact</a>
+                <a href="#contact" class="navigation-link">Contact</a>
             </li>
         </ul>
         <ul class="social-icons-list">
@@ -72,7 +72,7 @@
         <button class="openbtn" onclick="openNav()"><i class="fas fa-bars"></i></button>
 
     </div>
-    <header class="header">
+    <header class="header" id="home">
         <div class="brand">
             <h3 class="furniture-heading"><span class="accent">Xsquite</span>
                 &nbsp; Furniture Store</h3>
@@ -86,7 +86,7 @@
         </div>
         <!--end of banner-->
     </header>
-    <section class="about-us">
+    <section class="about-us" id="about">
         <div class="about-us-content">
             <h2 class="heading">About Us</h2>
             <div class="underline">
@@ -118,7 +118,7 @@
         </div>
         <!--end of content-->
     </section>
-    <section class="products">
+    <section class="products" id="shop">
         <div class="common-heading">
             <h2 class="heading">Shop</h2>
             <div class="underline">
@@ -261,7 +261,7 @@
         </div>
         <!--end of product content-->
     </section>
-    <section class="customers">
+    <section class="customers" id="customer">
         <div class="common-heading">
             <h2 class="heading">Testimonials</h2>
             <div class="underline">
@@ -312,7 +312,7 @@
         <!--end of customer-card-wrapper-->
 
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contact">
         <div class="main-part">
             <div class="list-wrapper">
                 <h3 class="footer-heading">Xqusite Furniture Store</h3>
